--- a/index.html
+++ b/index.html
@@ -1,1 +1,251 @@
-poda
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <title>Bell</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+      <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="assets/stylesheet/bootstrap.min.css"/>
+      <link rel="stylesheet" href="assets/stylesheet/animate.css"/>
+      <link rel="stylesheet" href="assets/stylesheet/style.css"/>
+   </head>
+   <body class="green-color">
+      <header id="header">
+         <div class="background">
+            <video autoplay loop muted>
+               <source src="assets/video/main.mp4" type="video/mp4"/>
+               <source src="assets/video/main.ogg" type="video/ogg"/>
+            </video>
+         </div>
+         <div class="overlay"></div>
+         <div class="content">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-6 col-sm-4 col-xs-4">
+                     <h1 class="logo">Bell</h1>
+                  </div>
+                  <div class="col-md-6 col-sm-8 col-xs-8 social"> <a href="#" class="wow animated bounceIn" data-wow-delay=".5s"><i class="fa fa-twitter"></i></a> <a href="#" class="wow animated bounceIn" data-wow-delay=".75s"><i class="fa fa-facebook"></i></a> <a href="#" class="wow animated bounceIn" data-wow-delay="1s"><i class="fa fa-dribbble"></i></a> </div>
+               </div>
+               <div class="row">
+                  <div class="col-md-6 col-md-offset-3">
+                     <h2>DON'T WORRY, THE NEW SITE IS ALMOST DONE.</h2>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-md-12 countdown">
+                     <ul id="countdown" class="wow animated fadeInDown">
+                        <li>
+                           <span class="days">00</span> 
+                           <p class="timeRefDays">days</p>
+                        </li>
+                        <li class="seperator">.</li>
+                        <li>
+                           <span class="hours">00</span> 
+                           <p class="timeRefHours">hours</p>
+                        </li>
+                        <li class="seperator">:</li>
+                        <li>
+                           <span class="minutes">00</span> 
+                           <p class="timeRefMinutes">minutes</p>
+                        </li>
+                        <li class="seperator">:</li>
+                        <li>
+                           <span class="seconds">00</span> 
+                           <p class="timeRefSeconds">seconds</p>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-md-6 col-md-offset-3 subscribe wow animated fadeInUp">
+                     <div class="row">
+                        <form id="subscribe">
+                           <div class="col-md-8 col-sm-8"> <input type="email" name="email" placeholder="Enter Your Email Address" required/> </div>
+                           <div class="col-md-4 col-sm-4"> <button>Subscribe</button> </div>
+                        </form>
+                     </div>
+                     <div class="alert alert-success success_alert">Got it, you've been added to our email list.</div>
+                     <div class="alert alert-danger error_alert"><strong>Oops!</strong> There was a error!</div>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-md-6 col-md-offset-3 learn-more"> <a href="#content" class="fa fa-angle-down" data-smoothscroll="true"> Learn More</a> </div>
+               </div>
+            </div>
+         </div>
+      </header>
+      <section id="content">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-8 col-md-offset-2 wow animated fadeInUp">
+                  <h2>About Us</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia nisi viverra, hendrerit nibh non, egestas erat. Curabitur faucibus enim nec blandit dictum. Quisque tincidunt ipsum eu augue posuere, auctor tincidunt tortor aliquam. In luctus ornare blandit. Quisque aliquam volutpat purus, scelerisque sodales eros efficitur ut. Integer lorem augue, tincidunt at nisi quis, semper dictum metus. Curabitur egestas nec lorem id imperdiet.</p>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section>
+         <div class="container">
+            <div class="row feature-items">
+               <h2 class="wow animated fadeInDown">Features</h2>
+               <div class="col-md-4 col-sm-6 feature-item wow animated fadeInUp" data-wow-delay=".5s">
+                  <i class="fa fa-mobile"></i> 
+                  <p class="feature-item-title"><strong>Fully Responsive</strong></p>
+                  <p>Crafted to provide an optimal viewing experience with a minimum of resizing, and panning a wide range of devices.</p>
+               </div>
+               <div class="col-md-4 col-sm-6 feature-item wow animated fadeInUp" data-wow-delay=".75s">
+                  <i class="fa fa-twitter"></i> 
+                  <p class="feature-item-title"><strong>Twitter Feed</strong></p>
+                  <p>Encourage visitors to follow you and interact with you, which can result in new connections, clients or just friends.</p>
+               </div>
+               <div class="col-md-4 col-sm-6 feature-item wow animated fadeInUp" data-wow-delay="1s">
+                  <i class="fa fa-clock-o"></i> 
+                  <p class="feature-item-title"><strong>Countdown Clock</strong></p>
+                  <p>Animated LIVE Countdown that counts down in seconds, minutes, hours and days to any date.</p>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="gray">
+         <div class="container">
+            <div class="row team-members">
+               <h2>Meet The Team</h2>
+               <div class="col-md-4 col-sm-6">
+                  <div class="team-member wow animated bounceInUp" data-wow-delay=".5s">
+                     <div class="team-member-image">
+                        <img src="assets/demo/team/1.png" alt="Team Member"/> 
+                        <div class="team-member-overlay"> <a href="#"><i class="fa fa-linkedin-square"></i></a> <a href="#"><i class="fa fa-twitter-square"></i></a> <a href="#"><i class="fa fa-facebook-square"></i></a> </div>
+                     </div>
+                     <div class="team-member-info">
+                        <h3>Keyla S.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed pretium nisi. Nullam lectus massa, efficitur vitae purus at, aliquam iaculis lorem.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-4 col-sm-6">
+                  <div class="team-member wow animated bounceInUp" data-wow-delay=".75s">
+                     <div class="team-member-image">
+                        <img src="assets/demo/team/2.png" alt="Team Member"/> 
+                        <div class="team-member-overlay"> <a href="#"><i class="fa fa-linkedin-square"></i></a> <a href="#"><i class="fa fa-twitter-square"></i></a> <a href="#"><i class="fa fa-facebook-square"></i></a> </div>
+                     </div>
+                     <div class="team-member-info">
+                        <h3>Michael K.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed pretium nisi. Nullam lectus massa, efficitur vitae purus at, aliquam iaculis lorem.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-4 col-sm-6">
+                  <div class="team-member wow animated bounceInUp" data-wow-delay="1s">
+                     <div class="team-member-image">
+                        <img src="assets/demo/team/3.png" alt="Team Member"/> 
+                        <div class="team-member-overlay"> <a href="#"><i class="fa fa-linkedin-square"></i></a> <a href="#"><i class="fa fa-twitter-square"></i></a> <a href="#"><i class="fa fa-facebook-square"></i></a> </div>
+                     </div>
+                     <div class="team-member-info">
+                        <h3>Callen B.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed pretium nisi. Nullam lectus massa, efficitur vitae purus at, aliquam iaculis lorem.</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="bg bg-team">
+         <div class="container">
+            <div class="col-md-12">
+               <h2>Our office is our playground</h2>
+               <div class="col-md-8 col-md-offset-2">
+                  <p>We strongly believe in clean and minimalist designs with little distraction from the main cause. This also goes to show in the way our office looks.</p>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section>
+         <div class="container">
+            <div class="row">
+               <h2>Get In Touch</h2>
+               <div class="col-md-6 col-md-offset-3">
+                  <p>
+                     <i>
+                        Do you have a potential project you'd like to discuss or simply want to get in touch? Send us an email at: <a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="a2cac7cececde2c0c7cece8cc1cdcf">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
+                           /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */
+                        </script> or use the contact form below.
+                     </i>
+                  </p>
+                  <form role="form" id="contactus">
+                     <div class="alert alert-success" style="display: none;" id="success" role="alert">Thank you, your message was sent.</div>
+                     <div class="form-group"> <label for="name">Full Name</label> <input type="text" class="form-control input-lg" id="name" name="name" placeholder="Enter your full name" required> </div>
+                     <div class="form-group"> <label for="email">Email</label> <input type="email" class="form-control input-lg" id="email" name="email" placeholder="Enter your email" required> </div>
+                     <div class="form-group"> <label for="email">Message</label> <textarea class="form-control input-lg" id="message" name="message" rows="3" required></textarea> </div>
+                     <button type="submit" class="btn btn-lg btn-primary pull-right">Submit</button> 
+                  </form>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="gray">
+         <div class="container">
+            <div class="col-md-12">
+               <h2>Follow us at <a href="http://twitter.com/themewizz" target="_blank">@themewizz</a></h2>
+               <div class="twitter">
+                  <div class="tweet"></div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="short">
+         <div class="container">
+            <div class="col-md-3 col-sm-6"><img src="assets/demo/partners/envato.png" alt="Envato" class="wow animated bounceIn" data-wow-delay=".5s"></div>
+            <div class="col-md-3 col-sm-6"><img src="assets/demo/partners/themewizz.png" alt="ThemeWizz" class="wow animated bounceIn" data-wow-delay=".75s"></div>
+            <div class="col-md-3 col-sm-6"><img src="assets/demo/partners/themeforest.png" alt="ThemeForest" class="wow animated bounceIn" data-wow-delay="1s"></div>
+            <div class="col-md-3 col-sm-6"><img src="assets/demo/partners/oneclicklab.png" alt="OneClick Lab" class="wow animated bounceIn" data-wow-delay="1.25s"></div>
+         </div>
+      </section>
+      <footer>
+         <div class="container wow animated fadeInUp">
+            <div class="col-lg-3 col-md-4 col-sm-5 social">
+               <p><strong>CONNECT WITH US</strong></p>
+               <a href="#"><i class="fa fa-twitter-square"></i></a> <a href="#"><i class="fa fa-facebook-square"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-google-plus-square"></i></a> 
+            </div>
+            <div class="col-lg-6 col-md-5 col-sm-7 blog">
+               <p><strong>OUR BLOG</strong></p>
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo lorem massa, sollicitudin condimentum ipsum iaculis in. <a href="#">Read More...</a></p>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-12 contact">
+               <p><strong>TALK TO US</strong></p>
+               <p>
+                  <a href="#">
+                     <span class="__cf_email__" data-cfemail="87f4f2f7f7e8f5f3c7f3efe2eae2f0eefdfda9e4e8ea">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
+                        /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */
+                     </script>
+                  </a>
+                  <br/> <a href="#">@themewizz</a> 
+               </p>
+            </div>
+            <div class="col-md-12">
+               <hr/>
+            </div>
+            <div class="col-md-12 copyright"> <span>2014 &copy; Bell Inc.</span> <a href="#">Made In NYC</a> </div>
+         </div>
+         <a href="#header" class="fa fa-chevron-up move-up" data-smoothscroll="true"></a> 
+      </footer>
+      <script type="text/javascript" src="assets/javascript/main.js"></script> 
+      <style type="text/css"> #switch{background: #2c3e50; color: #eee; position: absolute; padding: 10px 20px; top: 50px; left: 0px; font-size: 12px; border-radius: 0px 6px 6px 0px; z-index: 1;}#switch ul{margin-bottom: 5px;}#switch ul li{cursor: pointer; padding-left: 10px;}#switch ul li:hover{background: #34495e;}@media screen and (max-width: 480px){#switch{display: none;}}</style>
+      <div id="switch">
+         <strong>COLORS</strong> 
+         <ul class="switch_color">
+            <li data-color="blue">Blue</li>
+            <li data-color="green">Green</li>
+            <li data-color="orange">Orange</li>
+            <li data-color="yellow">Yellow</li>
+         </ul>
+         <strong>Theme</strong> 
+         <ul class="switch_theme">
+            <li data-theme="light">Light</li>
+            <li data-theme="dark">Dark</li>
+            <li data-theme="blue">Blue</li>
+         </ul>
+      </div>
+      <script type="text/javascript">$('.switch_color li').on('click', function (){var color=$(this).data('color'); $('body').removeClass('blue-color green-color orange-color yellow-color').addClass(color+'-color');}); $('.switch_theme li').on('click', function (){var theme=$(this).data('theme'); $('body').removeClass('dark-theme blue-theme').addClass(theme+'-theme');}); </script>
+   </body>
+</html>
