--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                </div>
                <div class="row">
                   <div class="col-md-6 col-md-offset-3">
-                     <h2>We are thinking about the content of this website. Give us some time to think :-)</h2>
+                     <h2>We are thinking about the contents for this website. Give us some time to think :-)</h2>
                   </div>
                </div>
                <!-- <div class="row">
@@ -55,9 +55,9 @@
             <div class="row">
                <div class="col-md-8 col-md-offset-2 wow animated fadeInUp">
                   <h2>About Us</h2>
-                  <p>When we decided to make a website, we didn't what the webiste should be about. So one of us said that
+                  <p>When we decided to make a website, we didn't know wwhat the webiste should be about. So one of us said that
                      we have to think about it. So we started thinking about what we should do together. But unfortunately 
-                     we have different area of expertise, so we were unable to become a team with our skills. Then we thought we all have one thing in common, we all were thinking about we should do. Thus we found out that we are thinkers. So we started thinking. STILL THINKING......</p>
+                     we have different area of expertise, so we were unable to become a team with our skills. Then we thought we all have one thing in common, we all were thinking about what we should do. Thus we found out that we are thinkers. So we started thinking. STILL THINKING......</p>
                </div>
             </div>
          </div>
