--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
                <div class="col-md-8 col-md-offset-2 wow animated fadeInUp">
                   <h2>About Us</h2>
-                  <p>When we decided to make a website, we didn't know wwhat the webiste should be about. So one of us said that
+                  <p>When we decided to make a website, we didn't know what the website should be about. So one of us said that
                      we have to think about it. So we started thinking about what we should do together. But unfortunately 
                      we have different area of expertise, so we were unable to become a team with our skills. Then we thought we all have one thing in common, we all were thinking about what we should do. Thus we found out that we are thinkers. So we started thinking. STILL THINKING......</p>
                </div>
