--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
       <section class="bg bg-team">
          <div class="container">
             <div class="col-md-12">
-               <h2>Our office is our playground</h2>
+               <h2>Thinkers think alike</h2>
                <div class="col-md-8 col-md-offset-2">
-                  <p>We strongly believe in clean and minimalist designs with little distraction from the main cause. This also goes to show in the way our office looks.</p>
+                  <p>We strongly believe that thinking will change many things</p>
                </div>
             </div>
          </div>
