--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <section class="bg bg-team">
          <div class="container">
             <div class="col-md-12">
-               <h2>Thinkers think alike</h2>
+               <h2>Great minds think alike</h2>
                <div class="col-md-8 col-md-offset-2">
                   <p>We strongly believe that thinking will change many things</p>
                </div>
